<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <DatePicker
            android:id="@+id/date_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/wb_order_manager_date_select_begin_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wb_order_manager_date_select_begin_btn"
            android:textColor="#000000"
            android:textSize="16dp"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="请选择完成时间" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <DatePicker
            android:id="@+id/date_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/wb_order_manager_date_select_end_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wb_order_manager_date_select_end_btn"
            android:textColor="#000000"
            android:textSize="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/wb_order_manager_date_select_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/wb_order_manager_date_select_confirm_btn"
        android:textColor="#000000"
        android:textSize="16dp" />

</LinearLayout>