<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.fengchi.TimeTravel.Plan.View.PlanFragment">

    <LinearLayout
        android:background="@color/main_theme"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/plan_search"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/logo7"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_toRightOf="@id/logo"
            android:background="@drawable/plan_search_shape"
            android:gravity="center"
            android:hint="@string/plan_search"
            android:textColor="#000"
            android:textSize="14sp"
            android:textColorHint="@color/textHint"
            />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@id/plan_search"
        android:background="@color/white"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_rb1"
            style="@style/radiobtn1"
            android:text="@string/undo_plan"
            android:textSize="14sp"
            android:focusable="true"
            android:textColor="@drawable/plan_period_selector"
            />
        <RadioButton
            android:id="@+id/cutoff"
            android:visibility="gone"
            android:layout_width="0.1dp"
            android:layout_centerHorizontal="true"
            android:layout_height="43dp"
            android:background="@color/cutOff"
            android:layout_marginTop="1dp"/>
        <RadioButton
            android:id="@+id/rb_rb2"
            style="@style/radiobtn1"
            android:text="@string/do_plan"
            android:textSize="14sp"
            android:textColor="@drawable/plan_period_selector" />
    </RadioGroup>
    <LinearLayout
        android:id="@+id/blueBar"
        android:layout_below="@id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="3dip" >

        <ImageView
            android:id="@+id/iv_bottom_line"
            android:layout_width="40dip"
            android:layout_height="2dip"
            android:scaleType="matrix"
            android:src="@color/main_theme" />
    </LinearLayout>
    <View
        android:id="@+id/v_zhong"
        android:visibility="gone"
        android:layout_below="@id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/cutOff"
        android:layout_marginTop="1dp"/>
    <!-- TODO: Update blank fragment layout -->
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_plan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/blueBar">
    </android.support.v4.view.ViewPager>



</RelativeLayout>
