<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context="com.fengchi.TimeTravel.Statement.StatementFragment">


    <com.fengchi.TimeTravel.Utils.TitleBarView
        xmlns:titlebarview="http://schemas.android.com/apk/res/com.juli.onlineInstall"
        android:id="@+id/statement_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        titlebarview:leftable="false"
        app:rightDrawableShow="false"
        titlebarview:rightable="false"
        />
    <RelativeLayout
        android:id="@+id/rl_statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:background="@color/main_theme">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:text="@string/statementModule"
            android:textSize="20dip" />
    </RelativeLayout>
    <View
        android:id="@+id/v_zhong"
        android:layout_below="@id/rl_statement"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/cutOff" />
    <RelativeLayout
        android:layout_below="@id/v_zhong"
        android:id="@+id/quantitystatistics"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:transitionName="shareNames">
        <ImageView
            android:id="@+id/huodong"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:visibility="gone"/>
        <TextView
            android:layout_toRightOf="@id/huodong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_centerVertical="true"
            android:text="@string/quantityStatistics"
            android:textColor="@color/main_textcolor"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/iv_active"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/goods_order_enter"/>
    </RelativeLayout>
    <View
        android:id="@+id/v_activity"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/cutOff"
        android:layout_marginLeft="18dp"
        android:layout_below="@id/quantitystatistics"
        />
    <RelativeLayout
        android:id="@+id/performanceAccessment"
        android:layout_below="@id/v_activity"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff">
        <ImageView
            android:id="@+id/iv_shopping"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_centerVertical="true"
            android:text="@string/perferenceAssessment"
            android:layout_toRightOf="@id/iv_shopping"
            android:textColor="@color/main_textcolor"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/iv_store"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/goods_order_enter"/>
    </RelativeLayout>
    <View
        android:id="@+id/v_goods"
        android:layout_below="@id/performanceAccessment"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="18dp"
        android:background="@color/cutOff"/>
    <RelativeLayout
        android:layout_below="@id/v_goods"
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff">
        <ImageView
            android:id="@+id/iv_dingdan"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tv_dd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_centerVertical="true"
            android:text="@string/continuouslyUpdate"
            android:layout_toRightOf="@+id/iv_dingdan"
            android:textColor="@color/main_textcolor"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/iv_indent"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/goods_order_enter"
            android:visibility="gone"/>
    </RelativeLayout>
    <View
        android:id="@+id/v_dan"
        android:layout_below="@id/update"
        android:layout_width="match_parent"
        android:layout_marginLeft="18dp"
        android:layout_height="0.1dp"
        android:background="@color/cutOff"/>

</RelativeLayout>
