<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context="com.fengchi.TimeTravel.Mine.MineFragment">

    <RelativeLayout
        android:id="@+id/mine_bg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/city">

        <ImageView
            android:id="@+id/mine_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/mine_set"/>

        <ImageView
            android:id="@+id/iv_portrait"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/kid"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="冯驰"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/iv_portrait"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/mine_bg"
        android:visibility="gone"
        >

        <com.fengchi.TimeTravel.Utils.Seekbar
            android:id="@+id/rangeSeekbar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="80dp"
            app:min_value="0"
            app:max_value="100"/>

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:layout_alignParentRight="true"
            android:textSize="16dp"
            android:textColor="#f46b02"
            />

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:textSize="16dp"
            android:textColor="#f46b02"
            />

    </RelativeLayout>
    <View
        android:id="@+id/v_zhong"
        android:layout_below="@id/mine_bg"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/cutOff"
        android:layout_marginTop="1dp"/>
    <RelativeLayout
        android:layout_below="@id/v_zhong"
        android:id="@+id/serverAddress"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff">
        <ImageView
            android:id="@+id/huodong"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:visibility="gone"/>
        <TextView
            android:layout_toRightOf="@id/huodong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_centerVertical="true"
            android:text="@string/scan"
            android:textColor="@color/main_textcolor"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/iv_active"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/goods_order_enter"/>
    </RelativeLayout>
    <View
        android:id="@+id/v_activity"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/cutOff"
        android:layout_marginLeft="18dp"
        android:layout_below="@id/serverAddress"
        />
    <RelativeLayout
        android:id="@+id/checkUpdate"
        android:layout_below="@id/v_activity"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff">
        <ImageView
            android:id="@+id/iv_shopping"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_centerVertical="true"
            android:text="@string/checkUpdate"
            android:layout_toRightOf="@id/iv_shopping"
            android:textColor="@color/main_textcolor"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/iv_store"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/goods_order_enter"/>
    </RelativeLayout>
    <View
        android:id="@+id/v_goods"
        android:layout_below="@id/checkUpdate"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="18dp"
        android:background="@color/cutOff"/>
    <RelativeLayout
        android:layout_below="@id/v_goods"
        android:id="@+id/deleteCache"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff">
        <ImageView
            android:id="@+id/iv_dingdan"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tv_dd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_centerVertical="true"
            android:text="@string/deleteCache"
            android:layout_toRightOf="@+id/iv_dingdan"
            android:textColor="@color/main_textcolor"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tv_deleteCache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_textcolor"
            android:textSize="13sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"/>
    </RelativeLayout>
    <View
        android:id="@+id/v_dan"
        android:layout_below="@id/deleteCache"
        android:layout_width="match_parent"
        android:layout_marginLeft="18dp"
        android:layout_height="0.1dp"
        android:background="@color/cutOff"/>

</RelativeLayout>
